Fix prompt error alignment

--- a/src/components/Prompt.module.css
+++ b/src/components/Prompt.module.css
@@ -50,6 +50,7 @@
     color: var(--prompt-error-foreground-color);
 
     line-height: 125%;
+    text-align: center;
     font-size: 0.875rem;
     font-weight: 500;
 }
